--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ python-dotenv==0.13.0
 quantumrandom==1.9.0
 selenium==3.141.0
 typing-extensions==3.7.4.3
-urllib3==1.25.9
+urllib3>=1.26.5
 websockets==8.1
 yarl==1.6.0
